--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -14,6 +14,7 @@ body {
 }
 
 .page {
+  padding: 4rem;
   width: 100vw;
   height: 100vh;
   color: $white;
@@ -24,10 +25,26 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
     @include fontSize(100);
 
     h1 {
       margin: 0;
+    }
+  }
+
+  &__line {
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, 50%);
+      width: 100%;
+      height: 0.2rem;
+      background-color: $white;
     }
   }
 }
