--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -15,6 +15,10 @@ body {
   box-sizing: border-box;
 }
 
+p, a {
+  @include fontSize(12)
+}
+
 .page {
   display: flex;
   justify-content: center;
@@ -35,6 +39,27 @@ body {
 
     h1 {
       margin: 0;
+    }
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    & h2 {
+      color: black;
+      margin-bottom: 1.5rem;
+      @include fontSize(30);
+      &:first-child {
+        margin-top: 0;
+      }
+    }
+    & p {
+      color: black;
+      margin-left: $content-margin;
+    }
+    & a.page__source {
+      margin-left: $content-margin;
     }
   }
 
