--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -9,6 +9,8 @@ body {
   margin: 0 auto;
   font-size: 62.5%;
   font-family: nexa-light, sans-serif;
+  background: $main-color;
+  overflow: hidden;
 }
 
 * {
