--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -2,3 +2,17 @@
   font-size: ($sizeValue * 1) + px;
   font-size: ($sizeValue / 10) + rem;
 }
+
+@mixin customScroolbar() {
+  &::-webkit-scrollbar {
+    width: 0.25rem;
+  }
+
+  &::-webkit-scrollbar-track {
+    display: none;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.22);
+  }
+}
