--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -77,17 +77,7 @@ p, a {
     position: relative;
     flex-direction: column;
     justify-content: center;
-    &::-webkit-scrollbar {
-      width: 0.25rem;
-    }
-
-    &::-webkit-scrollbar-track {
-      display: none;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background-color: rgba(0, 0, 0, 0.22);
-    }
+    @include customScroolbar();
     & h2 {
       color: black;
       margin-bottom: 1.5rem;
