Started introduction page

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,116 +1,10 @@
-@import "colors";
-@import "fonts";
-@import "mixins";
-@import "transitions";
-@import "utils";
-@import "variables";
+@import "utils/colors";
+@import "utils/mixins";
+@import "utils/variables";
 
-body {
-  margin: 0 auto;
-  font-size: 62.5%;
-  font-family: nexa-light, sans-serif;
-  background: $main-color;
-  overflow: hidden;
-}
+@import "ui/content";
+@import "ui/images";
+@import "ui/transitions";
 
-* {
-  box-sizing: border-box;
-}
-
-p, a {
-  @include fontSize(12)
-}
-
-.page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: $page-padding;
-  width: 100vw;
-  height: 100vh;
-  color: $white;
-  background-color: $main-color;
-
-  & .content__fade {
-    position: relative;
-    z-index: 1;
-    pointer-events: none;
-    background-image: linear-gradient(to bottom, $main-color, transparentize($main-color, 1) 90%);
-    width: 100vw;
-    top: 43px;
-    height: 60px;
-    &:last-of-type {
-      background-image: linear-gradient(to bottom, transparentize($main-color, 1), $main-color 90%);
-      position: relative;
-      top: -43px;
-      @media screen and (min-height: 600px) {
-        top: -53px;
-      }
-      @media screen and (min-height: 782px) {
-        top: -59px;
-      }
-    }
-    @media screen and (min-height: 600px) {
-      top: 53px;
-    }
-    @media screen and (min-height: 782px) {
-      top: 59px;
-    }
-  }
-
-  &__title {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    @include fontSize(100);
-
-    h1 {
-      margin: 0;
-    }
-  }
-
-  &__content {
-    overflow-y: scroll;
-    position: relative;
-    flex-direction: column;
-    justify-content: center;
-    @include customScroolbar();
-    & h2 {
-      color: black;
-      margin-bottom: 1.5rem;
-      @include fontSize(30);
-      &:first-child {
-        margin-top: 0;
-      }
-    }
-    & p {
-      color: black;
-      margin-left: $content-margin;
-    }
-    & a.page__source {
-      margin-left: $content-margin;
-    }
-  }
-
-  &__line {
-    position: absolute;
-
-    &::before {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, 50%);
-      width: calc(100% - (#{$page-padding} * 2));
-      height: 0.2rem;
-      background-color: $white;
-    }
-  }
-}
-
-.bold {
-  font-family: nexa-bold, sans-serif;
-}
+@import "text/fonts";
+@import "text/text-styling";
