Added component transition

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -4,7 +4,8 @@
 
 @import "ui/content";
 @import "ui/images";
-@import "ui/transitions";
+@import "ui/transitions/transitions";
+@import "ui/transitions/timeline";
 
 @import "text/fonts";
 @import "text/text-styling";
