Updated timeline component transition

--- a/src/assets/scss/ui/transitions/timeline.scss
+++ b/src/assets/scss/ui/transitions/timeline.scss
@@ -4,7 +4,7 @@
 .timeline-leave-active {
   transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
 }
-.timeline-enter, .timeline-leave-to
-  /* .timeline-leave-active below version 2.1.8 */ {
+.timeline-enter, .timeline-leave-to {
   opacity: 0;
+  bottom: 0;
 }
