--- a/src/assets/scss/ui/_content.scss
+++ b/src/assets/scss/ui/_content.scss
@@ -40,6 +40,11 @@ body {
     justify-content: space-between;
     align-items: center;
     width: 10rem;
+    transition: all .8s ease;
+
+    &-focus {
+      top: 8rem;
+    }
 
     img {
       width: 4rem;
@@ -52,7 +57,7 @@ body {
   }
 
   &__title {
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     transition: all $transition-duration ease;
     cursor: pointer;
