--- a/src/assets/scss/ui/transitions/timeline.scss
+++ b/src/assets/scss/ui/transitions/timeline.scss
@@ -2,7 +2,7 @@
   transition: all .5s ease;
 }
 .timeline-leave-active {
-  transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+  transition: all .8s ease-out;
 }
 .timeline-enter, .timeline-leave-to {
   opacity: 0;
