--- a/src/assets/scss/ui/_content.scss
+++ b/src/assets/scss/ui/_content.scss
@@ -14,6 +14,10 @@ body {
   box-sizing: border-box;
 }
 
+img {
+  user-select: none;
+}
+
 .page {
   display: flex;
   flex-direction: column;
@@ -58,6 +62,7 @@ body {
 
   &__title {
     z-index: 2;
+    user-select: none;
     width: 100%;
     transition: all $transition-duration ease;
     cursor: pointer;
