--- a/src/assets/scss/text/_text-styling.scss
+++ b/src/assets/scss/text/_text-styling.scss
@@ -5,6 +5,7 @@ h2, h3 {
 h2 {
   color: black;
   margin-bottom: 1.5rem;
+  font-family: 'nexa-bold', sans-serif;
   @include fontSize(30);
   &:first-child {
     margin-top: 0;
