--- a/src/assets/scss/ui/_content.scss
+++ b/src/assets/scss/ui/_content.scss
@@ -84,12 +84,17 @@ img {
   }
 
   &__content {
-    position: relative;
-    color: $black;
     overflow-y: scroll;
     position: relative;
-    flex-direction: column;
-    justify-content: center;
+    padding: #{$page-padding / 2} $page-padding;
+    width: 100vw;
+    height: 70vh;
+    color: $black;
+
+    &:first-of-type {
+      margin-top: 2rem;
+    }
+
     &::-webkit-scrollbar {
       width: 0.25rem;
     }
@@ -120,6 +125,53 @@ img {
       margin-left: $content-margin;
       width: calc(100% - #{$content-margin});
       height: 22.8rem;
+    }
+  }
+
+  &__article {
+    margin: 0 auto $article_spacing;
+    position: relative;
+    max-width: 48rem;
+
+    &:last-of-type {
+      margin-bottom: inherit;
+    }
+
+    & .img-illu {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 15rem;
+
+      &-left {
+        left: -22rem;
+      }
+
+      &-right {
+        right: -22rem;
+      }
+
+      &-top, &-bottom {
+        height: 18rem;
+      }
+
+      &-top {
+        top: 35%;
+        transform: translateY(-50%);
+      }
+
+      &-bottom {
+        top: 80%;
+        transform: translateY(-50%);
+      }
+
+      &-bigger {
+        transform: translateY(-50%) scale(1.3);
+      }
+
+      &-smaller {
+        transform: translateY(-50%) scale(0.9);
+      }
     }
   }
 
