Fixed intro page

--- a/src/assets/scss/text/_text-styling.scss
+++ b/src/assets/scss/text/_text-styling.scss
@@ -29,6 +29,10 @@ a {
   font-family: nexa-bold, sans-serif;
 }
 
+.thin {
+  font-family: nexa-light, sans-serif;
+}
+
 .white {
   color: $white;
 }
